--- a/modules/KadenceBlocks/assets/styles/admin-editor/row-layout.css
+++ b/modules/KadenceBlocks/assets/styles/admin-editor/row-layout.css
@@ -52,7 +52,7 @@
     --kb-row-default-padding: 0;
 }
 .wp-block-kadence-rowlayout.kt-row-has-bg {
-    --kb-row-default-padding: var(--wp--custom--container-inset-y-lg);
+    --kb-row-default-padding: var(--wp--custom--container-inner-v-lg);
 }
 
 /**
@@ -105,11 +105,11 @@
     padding-right: var(--kb-padding-right);
 }
 
-/* 3. Wide containers: upgrade horizontal padding to container-inset-x-lg. */
+/* 3. Wide containers: upgrade horizontal padding to container-inner-h-lg. */
 @container kadence-rowlayout (min-width: 580px) {
     :where(.kt-row-has-bg) > .innerblocks-wrap {
-        --kb-padding-left: var(--wp--custom--container-inset-x-lg);
-        --kb-padding-right: var(--wp--custom--container-inset-x-lg);
+        --kb-padding-left: var(--wp--custom--container-inner-h-lg);
+        --kb-padding-right: var(--wp--custom--container-inner-h-lg);
     }
 }
 
