--- a/modules/ContentSlider/blocks/content-slider/style.css
+++ b/modules/ContentSlider/blocks/content-slider/style.css
@@ -7,7 +7,7 @@
 
 :root {
     /* Define default CSS variables */
-    --wp--custom--carousel-gap: var(--wp--preset--spacing--30, 1.5rem);
+    --wp--custom--carousel-gap: var(--wp--custom--container-outer-sm, var(--wp--preset--spacing--30, 1.5rem));
 }
 
 .sc-content-slider {
